--- a/app/src/main/res/menu/menu_add_diary.xml
+++ b/app/src/main/res/menu/menu_add_diary.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/save_diary"
-        android:icon="@mipmap/ic_save"
+        android:icon="@drawable/save"
         android:orderInCategory="100"
         android:title="保存"
         app:showAsAction="ifRoom"/>
     <item
-        android:id="@+id/action_share"
-        android:icon="@mipmap/ic_share"
-        android:title="分享"
+        android:id="@+id/clear_content"
+        android:icon="@drawable/eraser"
+        android:title="清除"
         android:orderInCategory="100"
         app:showAsAction="always"/>
 </menu>
