--- a/app/src/main/res/layout/activity_add_diary.xml
+++ b/app/src/main/res/layout/activity_add_diary.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,40 +17,105 @@
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:background="@null"/>
+        android:background="@null"
+        android:gravity="left|top"
+        android:inputType="textMultiLine"
+        android:minLines="10" />
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/multiple_actions"
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/menu_yellow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:fab_addButtonColorNormal="#2589ec"
-        app:fab_addButtonColorPressed="#2547ef"
-        app:fab_addButtonPlusIconColor="#ffffff"
-        app:fab_labelStyle="@style/menu_labels_style">
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
+        fab:menu_animationDelayPerItem="0"
+        fab:menu_colorNormal="#FFB805"
+        fab:menu_colorPressed="#F2AB00"
+        fab:menu_colorRipple="#D99200"
+        fab:menu_labels_hideAnimation="@anim/jump_to_down"
+        fab:menu_labels_showAnimation="@anim/jump_from_down"
+        fab:menu_labels_style="@style/MenuLabelsStyle"
+        fab:menu_shadowColor="#444">
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/action_a"
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/expression"
+            style="@style/MenuButtonsStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_colorNormal="#dcdfde"
-            app:fab_colorPressed="@color/white_pressed"
-            app:fab_icon="@drawable/ic_github"/>
+            android:src="@drawable/smail" />
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/action_b"
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/weather"
+            style="@style/MenuButtonsStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_colorNormal="#27d948"
-            app:fab_colorPressed="@color/white_pressed"
-            app:fab_icon="@drawable/smail" />
+            android:src="@drawable/sun" />
 
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+    </com.github.clans.fab.FloatingActionMenu>
+
+    <GridLayout
+        android:id="@+id/gl_expression"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#ffffff"
+        android:columnCount="3"
+        android:orientation="horizontal"
+        android:rowCount="2"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/btn_face_1"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:background="@drawable/btn_create_face_1" />
+
+        <Button
+            android:id="@+id/btn_face_2"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:background="@drawable/btn_create_face_2" />
+
+        <Button
+            android:id="@+id/btn_face_3"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:background="@drawable/btn_create_face_3" />
+
+        <Button
+            android:id="@+id/btn_face_4"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:background="@drawable/btn_create_face_4" />
+
+        <Button
+            android:id="@+id/btn_face_5"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:background="@drawable/btn_create_face_5" />
+
+        <Button
+            android:id="@+id/btn_face_6"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/btn_create_face_6" />
+
+    </GridLayout>
 </RelativeLayout>
