--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -17,8 +17,8 @@
         android:gravity="center">
         <Button
             android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="45dp"
             android:background="@drawable/add_diary_btn"/>
         <TextView
             android:id="@+id/tv"
