--- a/app/src/main/res/layout/activity_add_diary.xml
+++ b/app/src/main/res/layout/activity_add_diary.xml
@@ -55,67 +55,33 @@
             style="@style/MenuButtonsStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/sun" />
+            android:src="@drawable/cloud" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
-    <GridLayout
-        android:id="@+id/gl_expression"
-        android:layout_width="match_parent"
+    <GridView
+        android:id="@+id/face_choice"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#ffffff"
-        android:columnCount="3"
-        android:orientation="horizontal"
-        android:rowCount="2"
-        android:visibility="gone">
+        android:background="@color/caldroid_light_red"
+        android:cacheColorHint="#00000000"
+        android:gravity="center"
+        android:listSelector="@android:color/transparent"
+        android:numColumns="3"
+        android:scrollingCache="false"
+        android:visibility="gone" />
 
-        <Button
-            android:id="@+id/btn_face_1"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:background="@drawable/btn_create_face_1" />
-
-        <Button
-            android:id="@+id/btn_face_2"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:background="@drawable/btn_create_face_2" />
-
-        <Button
-            android:id="@+id/btn_face_3"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:background="@drawable/btn_create_face_3" />
-
-        <Button
-            android:id="@+id/btn_face_4"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:background="@drawable/btn_create_face_4" />
-
-        <Button
-            android:id="@+id/btn_face_5"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:background="@drawable/btn_create_face_5" />
-
-        <Button
-            android:id="@+id/btn_face_6"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_margin="15dp"
-            android:background="@drawable/btn_create_face_6" />
-
-    </GridLayout>
+    <GridView
+        android:id="@+id/weather_choice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:cacheColorHint="#00000000"
+        android:gravity="center"
+        android:listSelector="@android:color/transparent"
+        android:numColumns="3"
+        android:scrollingCache="false"
+        android:visibility="gone" />
 </RelativeLayout>
