--- a/app/src/main/res/layout/activity_show_diary.xml
+++ b/app/src/main/res/layout/activity_show_diary.xml
@@ -14,6 +14,16 @@
         app:popupTheme="@style/AppTheme.PopupOverlay" />
     <TextView
         android:id="@+id/tv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/transparent"
+        android:fadingEdge="vertical"
+        android:gravity="top"
+        android:lineSpacingExtra="12.0dip"
+        android:maxLength="5000"
+        android:paddingLeft="5.0dip"
+        android:paddingTop="3.0dip"
+        android:scrollbars="vertical"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/text_hui"/>
 </LinearLayout>
