--- a/app/src/main/res/layout/activity_show_diary.xml
+++ b/app/src/main/res/layout/activity_show_diary.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -12,6 +13,44 @@
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_scrollFlags="scroll|enterAlways|snap"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/emotion_m"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_dashboard"/>
+
+        <ImageView
+            android:id="@+id/weather_m"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/emotion_m"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_dashboard"/>
+
+        <TextView
+            android:id="@+id/time_m"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:gravity="center_vertical"
+            android:layout_marginRight="15dp"
+            android:text="00:00:00"/>
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/memo_title_line"
+        android:layout_width="fill_parent"
+        android:layout_height="2.0dip"
+        android:background="@drawable/line" />
+
     <TextView
         android:id="@+id/tv"
         android:layout_width="fill_parent"
@@ -24,6 +63,6 @@
         android:paddingLeft="5.0dip"
         android:paddingTop="3.0dip"
         android:scrollbars="vertical"
-        android:textSize="@dimen/text_small"
-        android:textColor="@color/text_hui"/>
+        android:textColor="@color/text_hui"
+        android:textSize="@dimen/text_small" />
 </LinearLayout>
