listfragment下拉刷新未解决

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -24,7 +24,7 @@
             android:id="@+id/tv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="@dimen/text_medium"
+            android:textSize="@dimen/text_small"
             android:text="test"
             android:visibility="gone"/>
     </LinearLayout>
