--- a/app/src/main/res/layout/activity_add_diary.xml
+++ b/app/src/main/res/layout/activity_add_diary.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,20 +16,11 @@
         app:layout_scrollFlags="scroll|enterAlways|snap"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-   <!-- <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:background="@null"
-        android:gravity="left|top"
-        android:inputType="textMultiLine"
-        android:minLines="10" />-->
-
     <EditText
         android:id="@+id/editText"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_below="@+id/toolbar"
         android:background="@color/transparent"
         android:fadingEdge="vertical"
         android:gravity="top"
@@ -36,9 +29,8 @@
         android:paddingLeft="5.0dip"
         android:paddingTop="3.0dip"
         android:scrollbars="vertical"
-        android:layout_below="@+id/toolbar"
-        android:textSize="@dimen/text_small"
-        android:textColor="@color/text_hui"/>
+        android:textColor="@color/text_hui"
+        android:textSize="@dimen/text_small" />
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/menu_yellow"
