--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -14,11 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
+        android:background="#f4f3f3"
         android:gravity="center">
         <Button
             android:id="@+id/button"
             android:layout_width="160dp"
             android:layout_height="45dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/add_diary_btn"/>
         <TextView
             android:id="@+id/tv"
