--- a/app/src/main/res/layout/item_diary.xml
+++ b/app/src/main/res/layout/item_diary.xml
@@ -33,7 +33,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toLeftOf="@+id/weather_l"
-                android:src="@drawable/ic_dashboard" />
+                android:src="@drawable/ic_dashboard"
+                android:layout_marginRight="-10dp"/>
 
             <ImageView
                 android:id="@+id/weather_l"
