--- a/app/src/main/res/layout/activity_add_diary.xml
+++ b/app/src/main/res/layout/activity_add_diary.xml
@@ -21,7 +21,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/toolbar"
-        android:background="@color/transparent"
+        android:background="@color/white"
         android:fadingEdge="vertical"
         android:gravity="top"
         android:lineSpacingExtra="12.0dip"
